--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
 
 :root {
-    --bg-color:#222;
+    --bg-color:#1f192f;
     --text-color:#f8f8ec;
 }
 
@@ -10,6 +10,7 @@
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 /*.color1 { color:#8ba6ac;}
@@ -119,11 +120,6 @@ header {
     position: relative;
     width: 100vw;
     height: 100vh;
-    background: var(--bg-color);
+    /*background: var(--bg-color);*/
 
-}
-
-#myCanvas {
-    width: 100%;
-    height: 100%;
 }
