--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
 
 :root {
-    --bg-color:#1f192f;
+    --bg-color:#222;
     --text-color:#f8f8ec;
-    --scroll-color:#da7421;
+    --scroll-color:#f8f8ec;
     --dark-color:#222;
 }
 
@@ -147,22 +147,31 @@ header {
     height: clamp(200px, 40%, 500px);
     overflow: hidden;
     position: absolute;
-    left: 50%;
+    left: 0;
+    margin-left: clamp(2rem, 10%, 3rem);
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(0, -50%);
+    z-index: 3;
+}
+
+.txt_box {
+    background: var(--bg-color);
+    width: clamp(300px, 20%, 500px);
+    height: clamp(200px, 40%, 500px);
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    margin-left: clamp(300px, 20%, 500px);
+    top: 50%;
+    transform: translate(0, -50%);
     z-index: 3;
 }
 
 .pfp {
     border: solid 4px var(--bg-color);
-    border-radius: 50%;
     width: 100%;
     height: 100%;
     transition: border 0.2s ease-in-out;
-}
-
-.pfp:hover {
-    border: solid 5px var(--text-color);
 }
 
 .faixa {
